# rentalhome

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  database.py  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt  tes.py
booking-frontend/: index.html  package-lock.json  package.json  vite.config.js
booking-frontend/src/: App.css  App.jsx  ProtectedRoute.jsx  index.css
booking-frontend/src/components/: Address.jsx  BookingPage.jsx  Breadcrumbs.jsx  Category.jsx  CheckboxWithLable.jsx  ConversationList.css  ConversationList.jsx  DateLabel.jsx  DatePicker.jsx  Home.jsx  InputWithLable.jsx  Login.jsx  Message.jsx  MultiImageUploader.jsx  NavBar.jsx  NavWithProfile.jsx  PopularCity.jsx  ReviewPage.jsx  SelectorWithLable.jsx  menubar.css
booking-frontend/src/components/AddItem/: index.jsx
booking-frontend/src/context/: authContext.jsx
booking-frontend/src/pages/: Chat.jsx  CountryApartmentList.jsx  CreateRentalProperty.jsx  Login.jsx  MessagesPage.jsx  PageLoadingWrapper.jsx  RegisterPage.jsx  RentDetail.jsx  SendMessage.jsx
database_access/: base_db.py  dB_api.py
models/: propery_mode.py
public/: index.html
routers/: auth.py  booking.py  country.py  message.py  property.py  record.py  rent.py  test.py
test_api/: auth.py  data.py  test_auth.py  test_message.py
tiktok_live_recorder/src/: main.py
tiktok_live_recorder/src/core/: tiktok_recorder.py  tiktokbot.py  video_management.py
tiktok_live_recorder/src/utils/: video_management.py
utils/: amazon_upload_image.py  auth.py  logger.py
(+2 files in other folders)
